--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -20,5 +20,6 @@
 .footer {
     padding: 30px;
     width: 100%;
-    background-color: #f5f5f5;
+    background-color: #292b2c;
+    color: rgba(255, 255, 255, .5);
 }
