--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -37,3 +37,16 @@
     list-style-type: none;
 }
 
+.black-container {
+    background-color: #292b2c;
+    color: rgba(255, 255, 255, .5);
+    padding-bottom: 1px;
+}
+
+.black-container .card {
+    background-color: #292b2c;
+    color: rgba(255, 255, 255, .5);
+    border: 1px solid rgba(255, 255, 255, .125);
+    margin: 15px 0px;
+}
+
