--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,6 +5,7 @@
 }
 
 .about {
+    position: relative;
     background-image: url('../img/background.png');
     height: 100vh;
     min-height: 500px;
@@ -12,6 +13,37 @@
     overflow: hidden;
     background-size: cover;
 }
+
+.about h1 {
+    text-transform: uppercase;
+    font-size: 5em;
+    font-weight: 900;
+}
+
+.about h2 {
+    font-weight: 500;
+    font-size: 2.25em;
+    margin-bottom: 30px;
+}
+
+.about-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.btn-resume {
+    border-width: 3px !important;
+    border-color: rgba(255, 255, 255, .5) !important;
+    color: inherit !important;
+}
+
+    .btn-resume:hover {
+        background: rgba(255, 255, 255, 1) !important;
+    }
 
 #footer-right li{
     display: inline-block;
