--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,7 +4,7 @@
     padding-right: 50px;
 }
 
-.about {
+.name {
     position: relative;
     background-image: url('../img/background.png');
     height: 100vh;
@@ -14,19 +14,19 @@
     background-size: cover;
 }
 
-.about h1 {
+.name h1 {
     text-transform: uppercase;
     font-size: 5em;
     font-weight: 900;
 }
 
-.about h2 {
+.name h2 {
     font-weight: 500;
     font-size: 2.25em;
     margin-bottom: 30px;
 }
 
-.about-content {
+.name-content {
     position: absolute;
     top: 50%;
     left: 50%;
