Resume download button visted text now uses same color

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -49,6 +49,10 @@
         color: inherit;
     }
 
+    .btn-resume:visited {
+        color: inherit;
+    }
+
 .about {
     padding-top: 30px;
     padding-bottom: 15px;
