--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,11 @@
+.nav-link {
+    color: rgba(255, 255, 255, .5);
+}
+
+    .nav-link:hover {
+        color: rgba(255, 255, 255, .75);
+    }
+
 .header {
     padding-top: 25px;
     padding-left: 50px;
