--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -140,3 +140,11 @@
     background-color: #292b2c;
     color: rgba(255, 255, 255, .5);
 }
+
+    .footer a {
+        color: rgba(255, 255, 255, .5);
+    }
+
+        .footer a:hover {
+            color: rgba(255, 255, 255, .75);
+        }
