--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,7 +12,7 @@
     padding-right: 50px;
 }
 
-.name {
+#name {
     position: relative;
     background-image: url('../img/background.png');
     height: 100vh;
@@ -24,13 +24,13 @@
     border-radius: 0;
 }
 
-.name h1 {
+#name h1 {
     text-transform: uppercase;
     font-size: 5em;
     font-weight: 900;
 }
 
-.name h2 {
+#name h2 {
     font-weight: 500;
     font-size: 2.25em;
     margin-bottom: 30px;
@@ -61,7 +61,7 @@
         color: inherit;
     }
 
-.about {
+#about {
     padding-top: 30px;
     padding-bottom: 15px;
 }
@@ -130,6 +130,16 @@
     float: right;
 }
 
+#projects {
+    padding-top: 30px;
+    padding-bottom: 15px;
+}
+
+#contact {
+    padding-top: 30px;
+    padding-bottom: 15px;
+}
+
 #footer-right li {
     display: inline-block;
 }
@@ -148,3 +158,4 @@
         .footer a:hover {
             color: rgba(255, 255, 255, .75);
         }
+
