Added another project + added some spacing between project rows

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -136,6 +136,11 @@
     padding-bottom: 15px;
 }
 
+.project-row {
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
 #contact {
     padding-top: 30px;
     padding-bottom: 15px;
