--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -122,14 +122,35 @@
         margin-top: 8px;
     }
 
+.timeline-icon.left {
+    float: right
+}
+
+.timeline-icon.right {
+    float: left;
+}
+
+
 .timeline-text {
     text-align: right;
     vertical-align: middle;
     height: 50px;
     line-height: 50px;
-    margin-right: 15px;
-    float: right;
 }
+
+    .timeline-text.left {
+        float: right;
+        margin-right: 15px;
+    }
+
+    .timeline-text.right {
+        float: left;
+        margin-left: 15px;
+    }
+
+    .timeline-text.double {
+        line-height: 25px;
+    }
 
 #projects {
     padding-top: 30px;
