--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -167,6 +167,32 @@
     padding-bottom: 15px;
 }
 
+.project-info {
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    text-align: center;
+    background: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    margin: 0 15px;
+    transition: 0.5s all ease;            
+}
+
+.project-info:hover {
+    opacity: 1;
+}
+.project-text {
+    position: absolute;
+    padding: 10px;
+    width: 100%;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%)
+}
+
 #contact {
     padding-top: 30px;
     padding-bottom: 15px;
