--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -176,6 +176,7 @@
     right: 0;
     text-align: center;
     background: rgba(0, 0, 0, 0.5);
+    border-radius: 0.25rem;
     color: #fff;
     margin: 0 15px;
     transition: 0.5s all ease;            
