--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -225,20 +225,33 @@
     text-align: center;
 }
 
-.project-description {
-    padding-left: 15px;
-    padding-right: 15px;
-}
-
-.project-description h3 {
+.project-description h3, h4 {
     text-align: center;
 }
-
-.project-approach {
+.project-description p {
     padding-left: 15px;
     padding-right: 15px;
+}
+.project-description p:first-of-type {
+    padding-top: 15px;
+}
+
+.project-description p:last-of-type {
+    padding-bottom: 15px;
 }
 
 .project-approach h3 {
     text-align: center;
+}
+
+.project-approach p {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+.project-approach p:first-of-type {
+    padding-top: 15px;
+}
+
+.project-approach p:last-of-type {
+    padding-bottom: 15px;
 }
