--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -255,3 +255,9 @@
 .project-approach p:last-of-type {
     padding-bottom: 15px;
 }
+
+.project-images img {
+    max-width: 100%;
+    display: block;
+    margin: 0 auto;
+}
