--- a/src/pages/index.njk
+++ b/src/pages/index.njk
@@ -2,6 +2,26 @@
 
 {% block content %}
 
+<nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse">
+    <ul class="nav nav-pills float-right">
+        <li class="nav-item">
+            <a class="nav-link" href="#about">About</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#skills">Technical Skills</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#experience">Experience</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#projects">Projects</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#contact">Contact</a>
+        </li>
+    </ul>
+</nav>
+
 <div id="name" class="jumbotron">
     <div class="name-content">
         <h1>Mitchell Caisse</h1>
