--- a/src/pages/project.njk
+++ b/src/pages/project.njk
@@ -5,19 +5,19 @@
     <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse">
         <ul class="nav nav-pills float-right">
             <li class="nav-item">
-                <a class="nav-link" href="/#about">About</a>
+                <a class="nav-link" href="../#about">About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/#skills">Technical Skills</a>
+                <a class="nav-link" href="../#skills">Technical Skills</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/#experience">Experience</a>
+                <a class="nav-link" href="../#experience">Experience</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/#projects">Projects</a>
+                <a class="nav-link" href="../#projects">Projects</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/#contact">Contact</a>
+                <a class="nav-link" href="../#contact">Contact</a>
             </li>
         </ul>
     </nav>
