--- a/src/pages/project.njk
+++ b/src/pages/project.njk
@@ -60,13 +60,13 @@
 
     <div class="project-images">
         <div class="row">
-            <img src="img/projects/cartracker/cartracker_1.png" />
+            <img src="../img/projects/cartracker/cartracker_1.png" />
         </div>
         <div class="row">
-            <img src="img/projects/cartracker/cartracker_2.png" />
+            <img src="../img/projects/cartracker/cartracker_2.png" />
         </div>
         <div class="row">
-            <img src="img/projects/cartracker/cartracker_3.png" />
+            <img src="../img/projects/cartracker/cartracker_3.png" />
         </div>
     </div>
 {% endblock %}
