--- a/src/pages/project.njk
+++ b/src/pages/project.njk
@@ -5,19 +5,19 @@
     <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse">
         <ul class="nav nav-pills float-right">
             <li class="nav-item">
-                <a class="nav-link" href="../#about">About</a>
+                <a class="nav-link" href="{{ contextRoot }}#about">About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="../#skills">Technical Skills</a>
+                <a class="nav-link" href="{{ contextRoot }}#skills">Technical Skills</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="../#experience">Experience</a>
+                <a class="nav-link" href="{{ contextRoot }}#experience">Experience</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="../#projects">Projects</a>
+                <a class="nav-link" href="{{ contextRoot }}#projects">Projects</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="../#contact">Contact</a>
+                <a class="nav-link" href="{{ contextRoot }}#contact">Contact</a>
             </li>
         </ul>
     </nav>
@@ -60,13 +60,13 @@
 
     <div class="project-images">
         <div class="row">
-            <img src="../img/projects/cartracker/cartracker_1.png" />
+            <img src="{{ contextRoot }}img/projects/cartracker/cartracker_1.png" />
         </div>
         <div class="row">
-            <img src="../img/projects/cartracker/cartracker_2.png" />
+            <img src="{{ contextRoot }}img/projects/cartracker/cartracker_2.png" />
         </div>
         <div class="row">
-            <img src="../img/projects/cartracker/cartracker_3.png" />
+            <img src="{{ contextRoot }}img/projects/cartracker/cartracker_3.png" />
         </div>
     </div>
 {% endblock %}
