--- a/src/templates/layout.njk
+++ b/src/templates/layout.njk
@@ -5,9 +5,9 @@
     <meta charset="utf-8"/>
     <meta name="viewport" context="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     
-    <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css"/>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="{{ contextRoot }}lib/bootstrap/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="{{ contextRoot }}lib/font-awesome/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="{{ contextRoot }}css/styles.css" />
 
     <title>Mitchell Caisse - Software Engineer</title>
 </head>
@@ -30,7 +30,7 @@
         </div>
     </footer>
 
-    <script type="text/javascript" src="lib/bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="{{ contextRoot }}lib/bootstrap/js/bootstrap.min.js"></script>
 </body>
 
 </html>
