--- a/src/pages/project.njk
+++ b/src/pages/project.njk
@@ -33,40 +33,25 @@
         <div class="row">
             <div class="col project-description">
                 <h3>About the Project</h3>
-                <p>Car Tracker is an Android application and web application to track vehicle and trip information. Similar to Strava and MapMyRun, except for your car. The Android application connects to your cars daignostic system using a bluetooth ODBII reader. Once connected it gathers various statistics, (speed, engine speed, oil temperature, air temperate, etc) and records them along with your current GPS position through out your trip. Once the trip is over they are uploaded to a server and available for viewing. Future plans are to update the server to provide more performance and maintance information. Such as how fuel efficient your car is and when its due for its next maintenance.</p>
+                {%include about %}
 
                 <h4>Related Skills</h4>
-                <p>Java, Andriod SDK, HTML, Javascript, KnockoutJS, RequireJS, mybatis, MariaDB, SQL, Spring Framework, Jenkins</p>
+                <p>{{ relatedSkills | join(", ") }}</p>
             </div>
+
             <div class="col project-approach">
                 <h3>Project Approach</h3>
-                <p>
-                    The project is divided into two applications.
-                    The Android Application which is responsible for collecting the information from the car and uploading it.
-                    The Web Application which collects the information from the Android app performs analysis and presents it to the user in an easy to read and understand format.
-                </p>
-
-                <p>To keep things simple and allow easy code re-use between the Android application and Web app both were written in Java.</p>
-
-                <p>The webapplication utilizes Spring Framework for hanlding dependency injection, the RESTFul API, serving WebPages using Thymeleaf as a templating engine, and to secure the application. MyBatis was used to provide a simple Data Access Layer between the application and its database.</p>
-                <p>On the android side <a href="https://github.com/pires/obd-java-api" target="_blank">piers odb-java-api</a> is used to communicate with the vehicle. Spring RestTemplate is used to consume the RESTFul api exposed by the web application.</p>
-
-                <p>The source code for the application can be found <a href="https://github.com/mwcaisse/CarTracker" target="_blank">here</a>.</p>
+                {%include approach %}
             </div>
-
 
         </div>
     </div>
 
     <div class="project-images">
+        {% for image in images %}
         <div class="row">
-            <img src="{{ contextRoot }}img/projects/cartracker/cartracker_1.png" />
+            <img src="{{ contextRoot }}{{ image }}" />
         </div>
-        <div class="row">
-            <img src="{{ contextRoot }}img/projects/cartracker/cartracker_2.png" />
-        </div>
-        <div class="row">
-            <img src="{{ contextRoot }}img/projects/cartracker/cartracker_3.png" />
-        </div>
+        {% endfor %}
     </div>
 {% endblock %}
