--- a/src/pages/project.njk
+++ b/src/pages/project.njk
@@ -48,6 +48,10 @@
     </div>
 
     <div class="container project-images">
+        <hr />
+        <h3>Result</h3>
+        <br/>
+
         {% for image in images %}
         <div class="row">
             <img src="{{ contextRoot }}{{ image }}" />
