--- a/src/templates/partials/mwcaisse/approach.html
+++ b/src/templates/partials/mwcaisse/approach.html
@@ -1,4 +1,8 @@
 ﻿<p>
-    This is the approach section for Show Reminder
+    I wanted a site that was responsive and quick to load, which led me to chose using Bootstrap and Nunjucks. Bootstrap for easily making a responsive site that  looked nice and Nunjucks for the templating benefits it provided.
 </p>
+<p>
+    The site consists of two template pages both backed by data stored in JSON format. This allows for easily adding more content and updating the look and feel. If I decide I want to change how an experient point looks, I edit the template once and each one is updated.
+</p>
+<p>The source for the project can be found <a href="https://github.com/mwcaisse/portfolio" target="_blank">here</a>.</p>
 
