Added the contact form

--- a/src/Portfolio.Web/src/pages/index.njk
+++ b/src/Portfolio.Web/src/pages/index.njk
@@ -188,7 +188,26 @@
     <div id="contact" class="black-container">
         <div class="container">
             <h3>Contact</h3>
-            <p>Here be the contact information.</p>
+            
+            <form>
+                <div class="form-group">
+                    <label for="inputName">Name</label>
+                    <input type="text" class="form-control" id="inputName" placeholder="Enter name" />
+                </div>
+
+                <div class="form-group">
+                    <label for="inputEmail">Email</label>
+                    <input type="email" class="form-control" id="inputEmail" placeholder="Enter email" />
+                </div>
+
+                <div class="form-group">
+                    <label for="inputMessage">Message</label>
+                    <textarea class="form-control" id="inputMessage" rows="5"></textarea>
+                </div>
+
+                <button type="button" class="btn btn-primary">Send</button>
+            </form>
+
         </div>
     </div>
 
