--- a/src/Portfolio.Web/src/templates/layout.njk
+++ b/src/Portfolio.Web/src/templates/layout.njk
@@ -31,6 +31,9 @@
     </footer>
 
     <script type="text/javascript" src="{{ contextRoot }}lib/bootstrap/js/bootstrap.min.js"></script>
+
+    {% block scripts %}
+    {% endblock %}
 </body>
 
 </html>
