--- a/src/Portfolio.Web/src/pages/index.njk
+++ b/src/Portfolio.Web/src/pages/index.njk
@@ -190,19 +190,34 @@
             <h3>Contact</h3>
             
             <form id="formContact">
-                <div class="form-group">
+                <div class="form-group" data-bind="css: {'has-danger': $data.Name.ShowError}">
                     <label for="inputName">Name</label>
-                    <input type="text" class="form-control" id="inputName" placeholder="Enter name" data-bind="textInput: $data.Name"/>
+                    <input type="text" class="form-control" id="inputName" placeholder="Enter name" 
+                           data-bind="textInput: $data.Name, 
+                                      css: {'form-control-danger': $data.Name.ShowError}"/>
+                    <div class="form-control-feedback" 
+                         data-bind="text: $data.Name.ValidationMessage,
+                                    visible: $data.Name.ShowError"></div>
                 </div>
 
-                <div class="form-group">
+                <div class="form-group" data-bind="css: {'has-danger': $data.Email.ShowError}">
                     <label for="inputEmail">Email</label>
-                    <input type="email" class="form-control" id="inputEmail" placeholder="Enter email" data-bind="textInput: $data.Email"/>
+                    <input type="email" class="form-control form-control-danger" id="inputEmail" placeholder="Enter email" 
+                           data-bind="textInput: $data.Email, , 
+                                      css: {'form-control-danger': $data.Email.ShowError}"/>
+                    <div class="form-control-feedback"
+                         data-bind="text: $data.Email.ValidationMessage,
+                                    visible: $data.Email.ShowError"></div>
                 </div>
 
-                <div class="form-group">
+                <div class="form-group" data-bind="css: {'has-danger': $data.Message.ShowError}">
                     <label for="inputMessage">Message</label>
-                    <textarea class="form-control" id="inputMessage" rows="5" data-bind="textInput: $data.Message"></textarea>
+                    <textarea class="form-control form-control-danger" id="inputMessage" rows="5" 
+                              data-bind="textInput: $data.Message, 
+                                         css: {'form-control-danger': $data.Message.ShowError}"></textarea>
+                    <div class="form-control-feedback"
+                         data-bind="text: $data.Message.ValidationMessage,
+                                    visible: $data.Message.ShowError"></div>
                 </div>
 
                 <button type="button" class="btn btn-primary" data-bind="click: $data.Send">Send</button>
