--- a/src/Portfolio.Web/src/pages/index.njk
+++ b/src/Portfolio.Web/src/pages/index.njk
@@ -202,7 +202,7 @@
 
                 <div class="form-group" data-bind="css: {'has-danger': $data.Email.ShowError}">
                     <label for="inputEmail">Email</label>
-                    <input type="email" class="form-control form-control-danger" id="inputEmail" placeholder="Enter email" 
+                    <input type="text" class="form-control form-control-danger" id="inputEmail" placeholder="Enter email" 
                            data-bind="textInput: $data.Email, , 
                                       css: {'form-control-danger': $data.Email.ShowError}"/>
                     <div class="form-control-feedback"
