Updated information on mwcaisse project

--- a/src/Portfolio.Web/src/templates/partials/mwcaisse/approach.html
+++ b/src/Portfolio.Web/src/templates/partials/mwcaisse/approach.html
@@ -1,8 +1,9 @@
 ﻿<p>
-    I wanted a site that was responsive and quick to load, which led me to chose using Bootstrap and Nunjucks. Bootstrap for easily making a responsive site that  looked nice and Nunjucks for the templating benefits it provided.
+    I wanted a site that was responsive and quick to load, which led me to chose using Bootstrap and Nunjucks. Bootstrap for easily making a responsive site that looked nice and Nunjucks for the templating benefits it provided.
 </p>
 <p>
-    The site consists of two template pages both backed by data stored in JSON format. This allows for easily adding more content and updating the look and feel. If I decide I want to change how an experient point looks, I edit the template once and each one is updated.
+    The site consists of two template pages both backed by data stored in JSON format. This allows for easily adding more content and updating the look and feel. If I decide I want to change how an experience point looks, I edit the template once and each one is updated.
 </p>
+<p>The contact portion of the site is powered by a simple .NET Core Rest API. I used .NET Core for two reasons: I wanted to learn more about .NET Core and for the ease of setup and configuration.</p>
 <p>The source for the project can be found <a href="https://github.com/mwcaisse/portfolio" target="_blank">here</a>.</p>
 
