--- a/src/Portfolio.Web/src/templates/partials/mwcaisse/about.html
+++ b/src/Portfolio.Web/src/templates/partials/mwcaisse/about.html
@@ -1,1 +1,1 @@
-﻿<p>This is where the about section for Show Reminder goes.</p>
+﻿<p>A personal website seems like a great way to demontrate my development skills. It is also a good way to branch out and learn new technologies and development patterns. Future plans include adding a blog and redesigning to keep the site looking fresh and keep learning newer technologies. </p>
