Added some basic details for Show Reminder

--- a/src/Portfolio.Web/src/templates/partials/showreminder/approach.html
+++ b/src/Portfolio.Web/src/templates/partials/showreminder/approach.html
@@ -1,4 +1,5 @@
 ﻿<p>
-    This is the approach section for Show Reminder
+    The approach was to create a simplistic UI using Angular 2 and Bootstrap 4 to allow users to search for a TV Show and add it to their tracked list. The user can then check the site periodically for the next air date of their tracked shows.
 </p>
 
+<p>The source code for the application can be found <a href="https://github.com/mwcaisse/ShowReminder" target="_blank">here</a>.</p>
