--- a/src/Portfolio.Web/src/templates/partials/showreminder/about.html
+++ b/src/Portfolio.Web/src/templates/partials/showreminder/about.html
@@ -1,1 +1,3 @@
-﻿<p>This is where the about section for Show Reminder goes.</p>
+﻿<p>Show Remidner is a web application to tell you the next air date of TV shows that you are following.</p>
+<p>The main reason for starting the project was to learn .NET Core, Angular 2, and Typescript and I always felt that I was forgetting to keep up to date on a show. I thought why not learn something new and make my life a little bit easier.</p>
+<p>The project uses the <a href="https://www.themoviedb.org/" target="_blank">The Movie DB</a> to pull show information and thier next air date.</p>
