--- a/src/Portfolio.Web/src/pages/index.njk
+++ b/src/Portfolio.Web/src/pages/index.njk
@@ -34,7 +34,10 @@
 <div id="about" class="black-container">
     <div class="container">
         <h3>About Me</h3>
-        <p>I am a software developer. I write some of the worst code imaginable, but somehow in the end it all ends up working. Just look at the source code for this site, it is appalling.</p>
+        <p>I am a motivated software developer with a penchant for creating intuitive user interfaces. 
+        That is not to say I don't know my way around a web service or database. 
+        I am a quick learner who thrives when thrown into situations with new and unfamiliar technologies and libraries.
+        I can often be found in a dark room coding, if I'm not I am likely cycling, driving, or bothering friends or family.</p>
     </div>
 </div>
 <!-- End of About Me Div-->
