Updated the approach + about for Show Reminder

--- a/src/Portfolio.Web/src/templates/partials/showreminder/about.html
+++ b/src/Portfolio.Web/src/templates/partials/showreminder/about.html
@@ -1,3 +1,4 @@
-﻿<p>Show Remidner is a web application to tell you the next air date of TV shows that you are following.</p>
-<p>The main reason for starting the project was to learn .NET Core, Angular 2, and Typescript and I always felt that I was forgetting to keep up to date on a show. I thought why not learn something new and make my life a little bit easier.</p>
-<p>The project uses the <a href="https://www.themoviedb.org/" target="_blank">The Movie DB</a> to pull show information and thier next air date.</p>
+﻿
+<p>Show Reminder is a web application to remind you when a TV Show is airing next or when it has last aired. The user can add shows to track and when visting the website the last + next air dates are shown. I always felt like I was forgetting to watch a certian episode of a show, this is the result. In the future it might have support for automatically sourcing a place to watch the episode.</p>
+
+<p>I wanted to learn Angular 2, Typescript, and .NET Core, this provided a great oppurtunity to learn both.</p>
