Uodated Mirror Mirror project information

--- a/src/Portfolio.Web/src/templates/partials/mirrormirror/about.html
+++ b/src/Portfolio.Web/src/templates/partials/mirrormirror/about.html
@@ -1,1 +1,9 @@
-﻿<p>This is where the about section for Show Reminder goes.</p>
+﻿<p>Mirror Mirror is a magic mirror project, which is a mirror with a screen behind it that displays useful information. In this case it is powered by a Raspberry PI 3 and a Java Web Application to provide the Website.</p>
+<p>The current features that are displayed are
+    <ul>
+        <li>Date and Time</li>
+        <li>Random message genered by <a href="https://en.wikipedia.org/wiki/Fortune_(Unix)" target="_blank">fortune</a></li>
+        <li>Weather provided by <a href="https://darksky.net/" target="_blank">Dark Sky</a></li>
+        <li>Commute time provided by <a href="https://maps.google.com">Google Maps</a></li>
+    </ul>
+</p>
