--- a/src/Portfolio.Web/src/templates/partials/mirrormirror/approach.html
+++ b/src/Portfolio.Web/src/templates/partials/mirrormirror/approach.html
@@ -1,4 +1,7 @@
 ﻿<p>
-    This is the approach section for Show Reminder
+    A Raspberry PI 3 served as the backend for this project. The Raspberry PI was running a minimalist Linux distribution, Arch Linux, OpenBox for a display manager, and Chromium in kiosk mode to display the web application. The web application itself was hosted on a seperate server.
 </p>
 
+<p>The web application was a simple single page that refreshed itself periodically to keep the information it displays up to date. It was backed by a RESTFul API that provided an interface to the weather API and fortune.</p>
+
+<p>The source code for the application can be found <a href="https://github.com/mwcaisse/MirrorMirror">here</a>.</p>
